--- a/Tensorflow Testing/digit recognization/mnist_image.ipynb
+++ b/Tensorflow Testing/digit recognization/mnist_image.ipynb
@@ -105,7 +105,7 @@
     "im = cv2.imread('photo_1.jpg')\n",
     "# Convert to grayscale and apply Gaussian filtering\n",
     "im_gray = cv2.cvtColor(im, cv2.COLOR_BGR2GRAY)\n",
-    "im_gray = cv2.GaussianBlur(im_gray, (5, 5), 0)\\\n",
+    "im_gray = cv2.GaussianBlur(im_gray, (5, 5), 0)\n",
     "       \n",
     "# Threshold the image\n",
     "ret, im_th = cv2.threshold(im_gray, 120, 255, cv2.THRESH_BINARY_INV)\n",
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
